--- a/main/spark_streaming.ipynb
+++ b/main/spark_streaming.ipynb
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Production Process"
+    "# Spark Structured Streaming Process"
    ]
   },
   {
