change: modify variables

--- a/main/spark_streaming.ipynb
+++ b/main/spark_streaming.ipynb
@@ -16,15 +16,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!export PYTHONPATH='./'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Standard library imports\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sleep\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_constants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Third-party imports\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
     "import findspark\n",
     "findspark.init()\n",
     "\n",
     "# Standard library imports\n",
     "from time import sleep\n",
+    "from .._constants import *\n",
     "\n",
     "# Third-party imports\n",
     "import numpy as np\n",
@@ -46,8 +68,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scala_version = '2.12'\n",
-    "spark_version = '3.5.1'\n",
     "packages = [\n",
     "    f'org.apache.spark:spark-sql-kafka-0-10_{scala_version}:{spark_version}',\n",
     "    'org.apache.kafka:kafka-clients:3.7.0'\n",
@@ -158,15 +178,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kafka_server = 'localhost:9092'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def queryWriter(topic_in, topic_out, checkpointPath):\n",
     "    streamRawDF = spark.readStream.format(\"kafka\").option(\"kafka.bootstrap.servers\", kafka_server).option(\"subscribe\", topic_in).option(\"startingOffsets\",\"latest\").load()\n",
     "\n",
@@ -178,7 +189,7 @@
     "    .format(\"kafka\") \\\n",
     "    .option(\"kafka.bootstrap.servers\", kafka_server) \\\n",
     "    .option('topic', topic_out) \\\n",
-    "    .option(\"checkpointLocation\", f'/home/cthi/UIT/IE212/checkpoint/' + checkpointPath) \\\n",
+    "    .option(\"checkpointLocation\", f'../checkpoint/' + checkpointPath) \\\n",
     "    # .trigger(processingTime=\"3 seconds\")\n",
     "\n",
     "    return query\n"
@@ -197,21 +208,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_in_1 = 'drone_1'\n",
-    "topic_in_2 = 'drone_2'\n",
-    "topic_in_3 = 'drone_3'\n",
-    "\n",
-    "topic_out_1 = 'UAV_1'\n",
-    "topic_out_2 = 'UAV_2'\n",
-    "topic_out_3 = 'UAV_3'\n",
-    "\n",
     "checkpoint_1 = 'uav1'\n",
     "checkpoint_2 = 'uav2'\n",
     "checkpoint_3 = 'uav3'\n",
     "\n",
     "query_1 = queryWriter(topic_in_1, topic_out_1, checkpoint_1)\n",
     "query_2 = queryWriter(topic_in_2, topic_out_2, checkpoint_2)\n",
-    "query_3 = queryWriter(topic_in_3, topic_out_3, checkpoint_3)\n"
+    "query_3 = queryWriter(topic_in_3, topic_out_3, checkpoint_3)"
    ]
   },
   {
